<resources>
    <string name="app_name">MadFit</string>
    <string name="loguearse">LOGUEARSE</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="usuario">Usuario</string>
    <string name="nusuario">Nombre de Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="rcontraseña">Repite la Contraseña</string>
    <string name="correo">Email</string>
    <string name="datos">Datos Personales</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Tu nº de móvil</string>
    <string name="ciudad">Tu ciudad</string>
    <string name="calle">Calle</string>
    <string name="numero">Numero</string>
    <string name="guardar">GUARDAR</string>
    <string name="deportes">DEPORTES</string>
    <string name="partidos">PARTIDOS</string>
    <string name="centro">Centro Deportivo</string>
    <string name="deporte2">Deporte</string>
    <string name="fecha">Fecha</string>
    <string name="jugadores">Jugadores</string>
    <string name="hora">Hora</string>

</resources>