<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1">


    <TextView
        android:id="@+id/deportes"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gris"
        android:gravity="center"
        android:text="@string/partidos"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/verde_claro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deportes"
        app:layout_constraintVertical_bias="0.45"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/tcentro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="32dp"
            android:background="@color/verde_claro"
            android:text="@string/centro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/txtnombrecentro"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/tcentro"
            app:layout_constraintTop_toBottomOf="@+id/tcentro" />

        <TextView
            android:id="@+id/tdeporte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/verde_claro"
            android:text="@string/deporte2"
            app:layout_constraintStart_toStartOf="@+id/txtnombrecentro"
            app:layout_constraintTop_toBottomOf="@+id/txtnombrecentro" />

        <Spinner
            android:id="@+id/txtdeporte"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/tdeporte"
            app:layout_constraintTop_toBottomOf="@+id/tdeporte" />

        <TextView
            android:id="@+id/tfecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/verde_claro"
            android:text="@string/fecha"
            app:layout_constraintStart_toStartOf="@+id/txtdeporte"
            app:layout_constraintTop_toBottomOf="@+id/txtdeporte" />

        <Spinner
            android:id="@+id/txtfecha"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/tfecha"
            app:layout_constraintTop_toBottomOf="@+id/tfecha" />

        <TextView
            android:id="@+id/tjugadores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:background="@color/verde_claro"
            android:text="@string/jugadores"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tdeporte"
            app:layout_constraintTop_toTopOf="@+id/tdeporte" />

        <Spinner
            android:id="@+id/txtjugadores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tjugadores"
            app:layout_constraintTop_toBottomOf="@+id/tjugadores" />

        <TextView
            android:id="@+id/thora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/verde_claro"
            android:text="@string/hora"
            app:layout_constraintStart_toStartOf="@+id/txtjugadores"
            app:layout_constraintTop_toBottomOf="@+id/txtjugadores" />

        <Spinner
            android:id="@+id/txthora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/thora"
            app:layout_constraintTop_toBottomOf="@+id/thora" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:background="@color/trans"
            android:shadowRadius="12"
            android:text="@string/guardar"
            android:textColor="@color/verde_progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.843"
            app:layout_constraintStart_toEndOf="@+id/tcentro"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="284dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="188dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>