<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/verde_fondo"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            android:background="@color/verde_fondo"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/datos"
                android:textSize="25dp"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="7dp"
            android:background="@color/verde_claro"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tvUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/black"
                android:hint="@string/nusuario"
                android:nextFocusDown="@+id/tvPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="7dp"
            android:background="@color/verde_claro"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tvNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/black"
                android:hint="@string/nombre"
                android:nextFocusDown="@+id/tvPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="7dp"
            android:background="@color/verde_claro"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tvApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/black"
                android:hint="@string/apellidos"
                android:nextFocusDown="@+id/tvPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="7dp"
            android:background="@color/verde_claro"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tvTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/black"
                android:hint="@string/telefono"
                android:nextFocusDown="@+id/tvPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="7dp"
            android:background="@color/verde_claro"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tvCiudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/black"
                android:hint="@string/ciudad"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="7dp"
            android:background="@color/verde_claro"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tvCalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/black"
                android:hint="@string/calle"
                android:nextFocusDown="@+id/tvPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="7dp"
            android:background="@color/verde_claro"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tvNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/black"
                android:hint="@string/numero"
                android:nextFocusDown="@+id/tvPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="7dp"
            android:background="@color/verde_fondo"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/verde_fondo"
                android:shadowRadius="12"
                android:text="@string/guardar"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="7dp"
            android:background="@color/verde_fondo"
            android:gravity="center"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>