<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:background="@color/verde_fondo"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="50dp"
            android:background="@color/verde_fondo"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="match_parent"
                android:layout_height="119dp"
                android:layout_marginTop="0dp"
                android:background="@color/verde_fondo"
                android:src="@drawable/logo_size_invert">

            </androidx.appcompat.widget.AppCompatImageButton>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="7dp"
                android:background="@color/verde_claro"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/tvUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/black"
                    android:hint="@string/correo"
                    android:nextFocusDown="@+id/tvPassword"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:background="@color/verde_claro"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/tvContraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/black"
                    android:hint="@string/contraseña"
                    android:nextFocusDown="@+id/tvPassword"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:background="@color/verde_claro"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/tvContraseñaR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/black"
                    android:hint="@string/rcontraseña"
                    android:nextFocusDown="@+id/tvPassword"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:background="@color/verde_fondo"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btRegistrarse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/verde_fondo"
                    android:shadowRadius="12"
                    android:text="@string/registrarse"
                    android:textColor="@color/white" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>